traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:10: error: Boolean.type does not take parameters
def posFinale() = Boolean {
                          ^